Fixed topnavbar hover color for accessibility/contrast

--- a/src/components/main.module.scss
+++ b/src/components/main.module.scss
@@ -63,6 +63,7 @@ h3 {
 
 }
 
+
 a:hover {
   color: $accent-gold;
 }
@@ -172,7 +173,7 @@ a:hover {
 }
 
 .topnavbar .iconslinks a:hover {
-  color: $accent-gold;
+  color: #2ed4e6f0;
 }
 
 .footer {
